--- a/styles.css
+++ b/styles.css
@@ -10,13 +10,15 @@ body {
   background: #f6f8fb; /* your page color */
 }
 
+
+
 body::before {
   content: "";
   position: fixed;
   inset: 0;
-  background: url("ashok.png.jpeg") no-repeat center 15%;
+  background: url("ashoksthamb.jpeg") no-repeat center 15%;
   background-size: 420px; /* adjust size */
-  background-position: center 40px;
+  background-position: center 100px;
   opacity: 0.09; /* lighter watermark */
   z-index: -1;
   pointer-events: none;
